--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -182,7 +182,7 @@
               <div class="form-group col-md-12">
                 <textarea id="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" name="comment" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                 </textarea>
-                <label for="userPasswordConfirm" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Comment">
+                <label for="comment" popover-append-to-body="{{true}}" class="text text-info" popover-trigger="mouseenter" uib-popover="Comment about the user (300 characters max)">
                   <i class="fa fa-question-circle"></i>
                 </label>
               </div>
