fix domains tabs

--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -76,7 +76,7 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Override HTTP Cookies</label>
     <div class="col-sm-9">
-      <toggle-switch id="overrideHTTPcookies" ng-model="$ctrl.rule.cookies.override" on-label="Yes" off-label="No">
+      <toggle-switch ng-model="$ctrl.rule.cookies.override overrideHTTPcookies" on-label="Yes" off-label="No">
       </toggle-switch>
     </div>
   </div>
