--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -469,7 +469,10 @@
                         <div class="col-sm-12">
                           <div class="checkbox">
                             <label>
-                              <input type="radio" ng-model="isCustomSSL_conf_profile" ng-value="false"> Predefined SSL Configuration Profile
+                              <input type="radio" class="inline-block" name="isCustomSSL_conf_profile" ng-model="isCustomSSL_conf_profile" ng-value="false"> Predefined SSL Configuration Profile
+                              <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                                <i class="fa fa-question-circle"></i>
+                              </label>
                             </label>
                           </div>
                         </div>
@@ -485,7 +488,10 @@
                         <div class="col-sm-12">
                           <div class="checkbox">
                             <label>
-                              <input type="radio" ng-model="isCustomSSL_conf_profile" ng-value="true"> Custom SSL Configuration Profile
+                              <input type="radio" ng-model="isCustomSSL_conf_profile" name="isCustomSSL_conf_profile" ng-value="true"> Custom SSL Configuration Profile
+                              <label for="isCustomSSL_conf_profile" popover-append-to-body="{{true}}" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
+                                <i class="fa fa-question-circle"></i>
+                              </label>
                             </label>
                           </div>
                         </div>
