--- a/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
+++ b/code/dev/parts/domains/domain-caching-rule/domain-caching-rule.tpl.html
@@ -91,7 +91,7 @@
   <div class="form-group ">
     <label class="col-sm-3 control-label">Override HTTP Cookies</label>
     <div class="col-sm-9">
-      <toggle-switch ng-model="$ctrl.rule.cookies.override overrideHTTPcookies" on-label="Yes" off-label="No">
+      <toggle-switch class="overrideHTTPcookies" ng-model="$ctrl.rule.cookies.override" on-label="Yes" off-label="No">
       </toggle-switch>
       <label for="override" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
         <i class="fa fa-question-circle"></i>
@@ -102,7 +102,7 @@
     <div class="form-group">
       <label class="col-sm-3 control-label">Ignore All HTTP Cookies</label>
       <div class="col-sm-9">
-        <toggle-switch id="ignoreAllHTTPcookies" ng-model="$ctrl.rule.cookies.ignore_all" on-label="Yes" off-label="No">
+        <toggle-switch class="ignoreAllHTTPcookies" ng-model="$ctrl.rule.cookies.ignore_all" on-label="Yes" off-label="No">
         </toggle-switch>
         <label for="ignore_all" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
           <i class="fa fa-question-circle"></i>
@@ -123,7 +123,7 @@
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.list_is_keep == true">List Of Cookies To Keep</label>
       <label class="col-sm-3 control-label" ng-if="$ctrl.rule.cookies.list_is_keep == false">List Of Cookies To Drop</label>
       <div class="col-sm-9">
-        <ui-select validate-cookies-options tagging tagging-label="Add New Cookie String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block" ng-disabled="_loading" ng-model="$ctrl.rule.cookies.keep_or_ignore_list" id="keep_or_ignore_list_str" name="keepOrIgnoreList">
+        <ui-select validate-cookies-options tagging tagging-label="Add New Cookie String" multiple tagging-tokens="SPACE|," theme="bootstrap" class="form-control inline-block listOfCookiesToDrop" ng-disabled="_loading" ng-model="$ctrl.rule.cookies.keep_or_ignore_list" id="keep_or_ignore_list_str" name="keepOrIgnoreList">
           <ui-select-match placeholder="Add Cookies String...">{{$item}}</ui-select-match>
           <ui-select-choices repeat="keep_or_ignore_list_str in $ctrl.rule.cookies.keep_or_ignore_list">
             {{keep_or_ignore_list_str}}
@@ -173,7 +173,7 @@
       Override Edge Caching
     </label>
     <div class="col-md-9">
-      <toggle-switch id="overrideEdgeCaching" ng-model="$ctrl.rule.browser_caching.override_edge" on-label="On" off-label="Off">
+      <toggle-switch class="overrideEdgeCaching" ng-model="$ctrl.rule.browser_caching.override_edge" on-label="On" off-label="Off">
       </toggle-switch>
        <label for="override_edge" class="text-info" popover-trigger="mouseenter" uib-popover="TODO text">
           <i class="fa fa-question-circle"></i>
@@ -212,7 +212,7 @@
       Enable The Serving of Stale Content
     </label>
     <div class="col-md-9">
-      <toggle-switch id="enableTheServingOfStaleContent" ng-model="$ctrl.rule.serve_stale.enable" on-label="On" off-label="Off">
+      <toggle-switch class="enableTheServingOfStaleContent" ng-model="$ctrl.rule.serve_stale.enable" on-label="On" off-label="Off">
       </toggle-switch>
       <label for="override_origin" class="text-info" popover-trigger="mouseenter" uib-popover="Define whether the edge proxy will serve end users with expired objects in case of origin slowness or downtime">
         <i class="fa fa-question-circle"></i>
@@ -222,7 +222,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleWhileFetchingTTL.$invalid && editForm.serveStaleWhileFetchingTTL.$dirty}" ng-if="$ctrl.rule.serve_stale.enable">
     <label class="col-sm-3 control-label">Stale Object TTL While Fetching New Object</label>
     <div class="col-md-9">
-      <input id="staleObjectTTLwhileFetchingNewObject" type="number" class="form-control inline-block" name="serveStaleWhileFetchingTTL" ng-model="$ctrl.rule.serve_stale.while_fetching_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <input type="number" class="form-control inline-block staleObjectTTLwhileFetchingNewObject" name="serveStaleWhileFetchingTTL" ng-model="$ctrl.rule.serve_stale.while_fetching_ttl" ng-min="0" ng-max="10000000" required> second(s)
       <label class="text-info" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users while fetching new objects from the origin server (range 0-10,000,000)">
         <i class="fa fa-question-circle"></i>
       </label>
@@ -234,7 +234,7 @@
   <div class="form-group form-inline" ng-class="{'has-error': editForm.serveStaleOriginSickTTL.$invalid && editForm.serveStaleOriginSickTTL.$dirty}" ng-if="$ctrl.rule.serve_stale.enable">
     <label class="col-sm-3 control-label">Stale Object TTL When Origin Is Down</label>
     <div class="col-md-9">
-      <input id="staleObjectTTLwhenOriginIsDown" type="number" class="form-control inline-block" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" required> second(s)
+      <input class="staleObjectTTLwhenOriginIsDown" type="number" class="form-control inline-block" name="serveStaleOriginSickTTL" ng-model="$ctrl.rule.serve_stale.origin_sick_ttl" ng-min="0" ng-max="10000000" required> second(s)
       <label class="text-info" popover-trigger="mouseenter" uib-popover="Sets the time period in seconds when stale objects are still served to end users if origin server is down as detected by the origin health monitoring probe (range 0-10,000,000)">
         <i class="fa fa-question-circle"></i>
       </label>
