Fixed object IDs on new domain page and UI test locator for Dashboard Undo icon

--- a/code/dev/parts/domains/new.html
+++ b/code/dev/parts/domains/new.html
@@ -74,7 +74,7 @@
                      class="form-control inline-block"
                      ng-disabled="_loading"
                      ng-model="model.origin_server"
-                     id="origin_server"
+                     id="originServer"
                      name="origin_server"
                      validate-origin-server-name
                      ng-maxlength="50"
