Add tooltips Change Password Page

--- a/code/dev/parts/logshippers/edit.html
+++ b/code/dev/parts/logshippers/edit.html
@@ -211,7 +211,7 @@
               <div class="col-sm-12 form-group">
                 <textarea id="comment" name="comment" placeholder="Comment (300 characters max)" ng-maxlength="300" class="form-control inline-block" ng-model="model.comment" ng-pattern="COMMENT_NO_SPECIAL_CHARS" ng-disabled="_loading">
                 </textarea>
-                <label for="comment" class="text text-info" popover-append-to-body="{{true}} popover-trigger=" mouseenter " uib-popover="Comment ">
+                <label for="comment" class="text text-info" popover-append-to-body="{{true}}" popover-trigger=" mouseenter " uib-popover="Comment ">
                   <i class="fa fa-question-circle "></i>
                 </label>
               </div>
