--- a/code/dev/parts/profile/edit.html
+++ b/code/dev/parts/profile/edit.html
@@ -28,7 +28,10 @@
             <div class="form-group" ng-class="{'has-error': editForm.current_password.$invalid && editForm.current_password.$dirty}">
               <label for="current_password" class="col-sm-2 control-label">Current Password *</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" name="current_password" ng-minlength="8" ng-maxlength="15" ng-disabled="_loading" ng-model="pass.current_password" id="current_password" autocomplete="off" autofocus required>
+                <input type="password" class="form-control inline-block" name="current_password" ng-minlength="8" ng-maxlength="15" ng-disabled="_loading" ng-model="pass.current_password" id="current_password" autocomplete="off" autofocus required>
+                <label for="current_password" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <i class="fa fa-question-circle"></i>
+                </label>
                 <div class="error-messages" ng-messages="editForm.current_password.$error" role="alert" ng-messages-multiple>
                   <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
                   <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
@@ -39,7 +42,10 @@
             <div class="form-group" ng-class="{'has-error': editForm.new_password.$invalid && editForm.new_password.$dirty}">
               <label for="new_password" class="control-label col-sm-2">New Password *</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" name="new_password" ng-minlength="8" ng-maxlength="15" ng-disabled="_loading" ng-model="pass.new_password" autocomplete="off" id="new_password" required>
+                <input type="password" class="form-control inline-block" name="new_password" ng-minlength="8" ng-maxlength="15" ng-disabled="_loading" ng-model="pass.new_password" autocomplete="off" id="new_password" required>
+                <label for="new_password" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <i class="fa fa-question-circle"></i>
+                </label>
                 <div class="error-messages" ng-messages="editForm.new_password.$error" role="alert" ng-messages-multiple>
                   <div ng-message="minlength" class="alert-text alert-text--minlength">Password must contain at least 8 characters</div>
                   <div ng-message="maxlength" class="alert-text alert-text--maxlength">Password must contain 15 characters max</div>
@@ -50,7 +56,10 @@
             <div class="form-group" ng-class="{'has-error': editForm.confirm_password.$invalid && editForm.confirm_password.$dirty}">
               <label for="confirm_password" class="control-label col-sm-2">Confirm New Password *</label>
               <div class="col-sm-10">
-                <input type="password" class="form-control" name="confirm_password" validate-compare-to="pass.new_password" ng-disabled="_loading" ng-model="pass.confirm_password" autocomplete="off" id="confirm_password">
+                <input type="password" class="form-control inline-block" name="confirm_password" validate-compare-to="pass.new_password" ng-disabled="_loading" ng-model="pass.confirm_password" autocomplete="off" id="confirm_password">
+                <label for="confirm_password" class="text text-info" popover-append-to-body="{{true}}" popover-trigger="mouseenter" uib-popover="TODO text">
+                  <i class="fa fa-question-circle"></i>
+                </label>
                 <div class="error-messages" ng-messages="editForm.confirm_password.$error" role="alert" ng-messages-multiple>
                   <div ng-message="pattern">The new and confirmation passwords do not match</div>
                   <div ng-messages-include="parts/shared/error-messages.html"></div>
